Beautify files and fix video wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -1,93 +1,132 @@
 body {
-    background-color: #3d3f40;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+  background-color: #3d3f40;
+  font-family: 'Helvetica', 'Arial', 'Sans-Serif';
 }
+
 div#header {
-    margin: auto;
+  margin: auto;
 }
+
 div#content {
-    margin: 60px auto;
-    width: 60%;
+  margin: 60px auto;
+  width: 60%;
 }
+
 div#column {
-    float: left;
-    padding: 5px;
-    width: 45%;
+  float: left;
+  padding: 5px;
+  width: 48%;
 }
+
 div#row:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
+
 nav, footer {
-    width: 100%;
-    background-color: #17191c;
-    border-right: none;
+  width: 100%;
+  background-color: #17191c;
+  border-right: none;
 }
+
 nav, footer ul {
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-    font-weight: bold;
-    color: #969595;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+  color: #969595;
 }
+
 nav ul li, footer ul li {
-    list-style: none;
-    display: inline;
-    text-align: center;
-    width: 12.5%; /* fallback for non-calc() browsers */
-    width: calc(100% / 8);
+  list-style: none;
+  display: inline;
+  text-align: center;
+  width: 12.5%;
+  /* fallback for non-calc() browsers */
+  width: calc(100% / 8);
 }
+
 nav, footer ul li:first-child {
-    border-left: none;
+  border-left: none;
 }
+
 nav ul li:before {
-    content: "/ ";
-    width: 1.2em;
-    color: #6b00b8;
+  content: "/ ";
+  width: 1.2em;
+  color: #6b00b8;
 }
+
 nav, footer ul li a {
-    display: block;
-    text-decoration: none;
-    color: #616161;
-    padding: 10px 0;
+  display: block;
+  text-decoration: none;
+  color: #616161;
+  padding: 10px 0;
 }
+
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
+
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
+
 h1 {
-    color: #8fa650;
+  color: #8fa650;
 }
+
 h1.title {
   color: #878787;
 }
+
 h1.title:hover {
   color: #D3D2D2;
 }
+
 h2 {
   color: #5f869c;
 }
+
 h3 {
-  color:	#e66f19;
+  color: #e66f19;
 }
+
 p {
-    color: #D3D2D2;
+  color: #D3D2D2;
 }
+
 footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
+  border-top: 1px solid #d5d5d5;
+  font-size: .8em;
 }
+
 ul.posts {
-    margin: 20px auto 40px;
-    font-size: 1.5em;
+  margin: 20px auto 40px;
+  font-size: 1.5em;
 }
+
 ul.posts li {
-    list-style: none;
+  list-style: none;
 }
+
 .container img {
-   width: 100%;
+  width: 100%;
+}
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+}
+
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
